hphp/hack/test/typecheck/array/allow_varray_where_dict_like_array_with_int_keys_is_required.php
<?hh

function test(): darray<int, string> {
  return vec["tingley"];
}
